# robosub_ros

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  makefile  newtons_to_pwm.tsv  thrust.py
.devcontainer/: Dockerfile  Dockerfile.amd  Dockerfile.arm  default.bashrc  devcontainer.json
.github/workflows/: build-devbox.yaml
doc/: dependencies.md  github.md
doc/lazershark_sim/: cv_notes.md  model.md  plugins.md  resources.md  ros_gz_bridge.md
docker/jetson/: Dockerfile  build_image.sh  run_docker.sh
docker/x86_64/: Dockerfile  build_image.sh  run_docker.sh
lib/: targetpoint_lib.py
pico/: seahawk.elf
setup/: gen_repo.sh
src/: .gitignore
src/depth_republisher/: package.xml  setup.cfg  setup.py
src/depth_republisher/depth_republisher/: depth_republisher.py
src/lazershark/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/lazershark/auv/: naviguider.py  targetpoint.py
src/lazershark/auv/jetson/: yolov5_node.py
src/lazershark/auv/pi/: a50.py  bms.py  cpp_test.cpp  logic.py  naviguider.py  pilot_input.py  piloted_thrust.py  planner.py  targetpoint.py  thrust.py
src/lazershark/gazebo_test/: imu_converter.py  naviguider.py  odometry_converter.py  pilot_input.py  thrust.py
src/lazershark/launch/: jetson.launch.py  lazershark.launch.py  lazershark_sim.launch.py  pi.launch.py  pi_collect_data.launch.py  sim.launch.py
src/lazershark/lazershark_sim/config/: ros_gz_bridge.yaml
src/lazershark/lazershark_sim/robot/: gazeboLaserShark.urdf  lazershark_sim.sdf  lazershark_sim.urdf  lazershark_sim_equipped.sdf
src/lazershark/lazershark_sim/robot/meshes/: imu_targetpoint0.STL  imu_targetpoint1.STL  thruster0.STL  thruster_4.STL
src/lazershark/lazershark_sim/worlds/: sun.sdf  waterworld.sdf
src/lazershark/params/: auv_ekf.yaml  ekf.yaml  nvblox.yaml  pathA.yaml  robosub_od.yaml
src/lazershark/sim/robot/: lazershark_sim.sdf  lazershark_sim.urdf
src/lazershark/sim/worlds/: water_plane.sdf  waterworld.sdf
src/lazershark/src/: pilot_input.py  thrust.py
src/lazershark_sim/: CMakeLists.txt  package.xml
src/lazershark_sim/config/: gazebo_lazershark_sim.param  joint_names_urdf_export_2.yaml  ros_gz_bridge.yaml  ros_gz_bridge.yml
src/lazershark_sim/hooks/: lazershark_sim.dsv.in  lazershark_sim.sh.in
src/lazershark_sim/launch/: display.launch  gazebo.launch  lazershark_auv.launch.py  lazershark_sim.launch.py  lazershark_world.launch.py
src/lazershark_sim/meshes/: imu_link.STL  thruster_1.STL  thruster_6.STL
src/lazershark_sim/robot/: lazershark_sim.csv.old  lazershark_sim.sdf  lazershark_sim.urdf  lazershark_sim_equipped.sdf  lazershark_sim_equipped.sdf.old
src/lazershark_sim/robot/meshes/: dvl_link.STL  thruster_0.STL  thruster_2.STL  thruster_3.STL  thruster_4.STL  thruster_5.STL  thruster_7.STL  zed_camera_link.STL
src/lazershark_sim/urdf/: lazershark_sim.urdf  urdf_export_2.csv
src/lazershark_sim/worlds/: multicopter_velocity_control.sdf  pool_floor.sdf  pool_light.sdf  quadcopter.sdf  quadcopter.sdf.old  water_plane.sdf  waterworld.sdf
src/zed_depth_cloud/: package.xml  setup.cfg  setup.py
src/zed_depth_cloud/zed_depth_cloud/: zed_depth_cloud.py
src/zed_pose_odom_tracker/: package.xml  setup.cfg  setup.py
src/zed_pose_odom_tracker/zed_pose_odom_tracker/: zed_pose_odom_tracker.py
