<package format="2">
  <name>LazerShark Sim</name>
  <version>1.0.0</version>
  <description>
    <p>This package contains configuration data, 3D models and launch files
for LazerShark robot</p>
  </description>
  <author>Cabrillo Robotics Club</author>
  <maintainer email="cabrillorobotis@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>