<package format="2">
  <name>lazershark_sim</name>
  <version>1.0.0</version>
  <description>
    <p>This package contains configuration data, 3D models and launch files
for LazerShark robot</p>
  </description>
  <author>Cabrillo Robotics Club</author>
  <maintainer email="cabrillorobotis@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>roslaunch</depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
        <build_type>ament_cmake</build_type>
  </export>
</package>