<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zed_depth_cloud</name>
  <version>0.0.0</version>
  <description>re publish pointcloud2 for internal use</description>
  <maintainer email="fxwllms1@gmail.com">fxwllms</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
