<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zed_pose_odom_tracker</name>
  <version>0.0.0</version>
  <description>ZED Pose and odom tracker with tf2 transforms</description>
  <maintainer email="fxwllms1@gmail.com">fxwllms</maintainer>
  <license>TODO: License declaration</license>

<!-- Build dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
